--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  
+ 
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   lottie: ^2.6.0
   assets: ^0.0.1
+  image_picker: ^1.0.4
+  tflite: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/model.tflite
   
 
   # An image asset can refer to one or more resolution-specific "variants", see
